<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/activity_search"
            android:text="@string/page_search"
            android:layout_width="100dp"
            android:layout_height="50dp"

            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimaryDark"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"/>
    <Button
            android:id="@+id/activity_map"
            android:text="@string/page_map"
            android:layout_width="100dp"
            android:layout_height="50dp"


            android:background="@color/colorPrimaryDark"
            android:textSize="10pt"
            app:layout_constraintStart_toEndOf="@+id/activity_search"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:id="@+id/activity_course"
            android:text="@string/page_courses"
            android:layout_width="100dp"
            android:layout_height="50dp"


            android:background="@color/colorPrimaryDark"
            android:textSize="10pt"
            app:layout_constraintStart_toEndOf="@+id/activity_map"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tvDistance"
            android:text="@string/distance"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"

            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_search"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"

            android:fontFamily="@font/montserrat_bold"/>
    <TextView
            android:id="@+id/tvVelocity"
            android:text="@string/velocity"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"

            app:layout_constraintStart_toEndOf="@+id/tvDistance"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_search"
    />

</androidx.constraintlayout.widget.ConstraintLayout>