<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderPage"
        android:background="@color/white"
        app:layout_constraintDimensionRatio="3">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="65dp"
            android:background="@color/asideBgColor"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/constraintLayout">
        <ImageView
                android:layout_width="58dp"
                android:layout_height="63dp"
                app:srcCompat="@drawable/ic_target"
                android:id="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/target_icon"
                android:layout_marginBottom="20dp"/>
        <TextView
                android:id="@+id/main"
                android:text="@string/main_text"

                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="270"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/about"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:id="@+id/about"
                android:text="@string/about_text"

                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="270"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/contacts"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:id="@+id/contacts"
                android:text="@string/contacts_text"

                android:layout_width="100dp"
                android:layout_height="145dp"
                android:rotation="270"
                android:gravity="center"
                android:fontFamily="@font/montserrat"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="80dp"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
            android:id="@+id/textMy"
            android:text="@string/my_text"
            android:fontFamily="@font/montserrat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
    />
    <TextView
            android:id="@+id/textHome"
            android:text="@string/home_text"
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="#EF5350"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toEndOf="@+id/textMy"
            android:layout_marginStart="20dp"
            android:scrollbarFadeDuration="250"
    />
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/orders_list"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHome"/>

</androidx.constraintlayout.widget.ConstraintLayout>