<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coursePageBg"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CoursePage"
        android:background="@color/black">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="65dp"
            android:layout_height="0dp"
            android:background="@color/asideBgColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="58dp"
                android:layout_height="63dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/target_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_target" />

        <TextView
                android:id="@+id/main"
                android:layout_width="100dp"

                android:layout_height="145dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:rotation="270"
                android:text="@string/main_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/about"
                android:layout_width="100dp"

                android:layout_height="145dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:rotation="270"
                android:text="@string/about_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/contacts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/contacts"
                android:layout_width="100dp"

                android:layout_height="145dp"
                android:layout_marginBottom="80dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:rotation="270"
                android:text="@string/contacts_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
            android:id="@+id/coursePageImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:transitionName="courseImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"

            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_java" />

    <TextView
            android:id="@+id/coursePageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/coursePageImage" />

    <androidx.cardview.widget.CardView
            android:id="@+id/courseBg"
            app:cardElevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/coursePageTitle"
            tools:targetApi="lollipop">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_width="147dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/course_start_date"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                <TextView
                        android:layout_width="139dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat"

                        android:text="@string/course_level"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/coursePageDate"
                        android:layout_width="148dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                <TextView
                        android:id="@+id/coursePageLevel"
                        android:layout_width="145dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/montserrat_bold"

                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
            android:id="@+id/coursePageText"
            android:layout_width="298dp"
            android:layout_height="76dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/course_desc"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/courseBg" />

    <ImageButton
            android:id="@+id/addToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/coursePageText"
            app:srcCompat="@drawable/ic_youtube" />
</androidx.constraintlayout.widget.ConstraintLayout>